--- a/ExcelR_Assignments/Simple Linear Regression/Simple_Linear_Regression_Sal_data.ipynb
+++ b/ExcelR_Assignments/Simple Linear Regression/Simple_Linear_Regression_Sal_data.ipynb
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1049,13 +1049,14 @@
        "array([623657.79116674])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg.predict([[15]])"
+    "reg.predict([[15]])\n",
+    "\n"
    ]
   },
   {
