Added Log Transformation Technique

--- a/ExcelR_Assignments/Simple Linear Regression/Simple_Linear_Regression_Sal_data.ipynb
+++ b/ExcelR_Assignments/Simple Linear Regression/Simple_Linear_Regression_Sal_data.ipynb
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1049,13 +1049,15 @@
        "array([623657.79116674])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "reg.predict([[15]])\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -1201,6 +1203,26 @@
    ],
    "source": [
     "test_model.predict([[30]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_model"
    ]
   },
   {
