--- a/ExcelR_Assignments/Simple Linear Regression/Simple_Linear_Regression_Sal_data.ipynb
+++ b/ExcelR_Assignments/Simple Linear Regression/Simple_Linear_Regression_Sal_data.ipynb
@@ -1227,6 +1227,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_model"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
